# badaq

./: .env.development  .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  quasar.config.js  snapcraft.yaml  tailwind.config.cjs  vite.config.js
.github/: release-drafter.yml
.github/workflows/: main.yml
components/: daplot.js  hero.js  statscard.js
pages/: _app.js  _document.js  index.js
src/: App.jsx  index.jsx
src-dummy/: Cargo.toml  broker.py  client.py  main.py  pyproject.toml  run.txt
src-dummy/producer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src-dummy/src/: main.rs
src-tauri/: .env.development  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/aerolib/: Cargo.toml
src-tauri/aerolib/src/: lib.rs
src-tauri/aerolib/src/aeronet/: net.rs
src-tauri/aerolib/src/aerotauri/: deploy.rs  env.rs  mod.rs  state.rs  tcp.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: err.rs  handler.rs  lib.rs  main.rs
src-tauri/src/cmd/: net.rs
src-tauri/src/utils/: deploy.rs  mod.rs
src-ui/: README.md  quasar.config.js
src-uudp/: Cargo.toml
src-uudp/src/: calib.rs  err.rs  handler.rs  main.rs  model.rs
src/components/: card.jsx  dialog.jsx  monitor.jsx  navbar.jsx
src/components/plot/: DaPlot.js  DaPlot.vue
src/layouts/: Default.js  Default.vue  DefaultLayout.js  DefaultLayout.vue
src/pages/index/: IndexPage.js  IndexPage.vue
src/router/: routes.js
src/stores/: force.js  index.js
src/styles/: index.css
themes/: default.js
